장바구니 리스트뷰, 결제 추가

--- a/android-client/app/src/main/res/layout/activity_cart.xml
+++ b/android-client/app/src/main/res/layout/activity_cart.xml
@@ -5,21 +5,55 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".upload.CartActivity">
+        tools:context=".upload.CartActivity" android:id="@+id/payBtn">
 
-    <TextView
-            android:text="TextView"
-            android:layout_width="322dp"
-            android:layout_height="378dp" android:id="@+id/tv_2"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="56dp"
-            app:layout_constraintHorizontal_bias="0.494" android:gravity="center_horizontal"/>
     <Button
-            android:text="사진 선택"
+            android:text="상품 추가하기"
             android:layout_width="267dp"
             android:layout_height="50dp" android:id="@+id/addBtn"
-            app:layout_constraintTop_toBottomOf="@+id/tv_2" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
-            app:layout_constraintHorizontal_bias="0.498" android:textColor="@color/white" android:background="#FFC7C7"
-            android:textSize="20sp" android:textStyle="bold"/>
+            android:textColor="@color/white" android:background="#FFC7C7"
+            android:textSize="20sp" android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/tv_total"
+            app:layout_constraintEnd_toEndOf="@+id/tv_total_sum"
+            app:layout_constraintTop_toBottomOf="@+id/tv_total"
+            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="32dp"/>
+    <ListView
+            android:layout_width="382dp"
+            android:layout_height="369dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/mainListView" app:layout_constraintHorizontal_bias="0.551"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="12dp"/>
+    <TextView
+            android:text="총합:"
+            android:layout_width="78dp"
+            android:layout_height="29dp" android:id="@+id/tv_total"
+            android:gravity="center_horizontal" android:textStyle="bold"
+            android:textSize="16sp" app:layout_constraintEnd_toStartOf="@+id/tv_total_sum"
+            android:layout_marginEnd="12dp" android:layout_marginRight="12dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/mainListView" android:layout_marginTop="52dp"/>
+    <TextView
+            android:text="0"
+            android:layout_width="160dp"
+            android:layout_height="31dp" android:id="@+id/tv_total_sum"
+            android:gravity="center_horizontal" android:textSize="16sp"
+            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="68dp"
+            android:layout_marginRight="68dp" app:layout_constraintTop_toBottomOf="@+id/mainListView"
+            android:layout_marginTop="52dp"/>
+    <Button
+            android:text="결제하기"
+            android:layout_width="267dp"
+            android:layout_height="50dp" android:id="@+id/payyBtn"
+            android:background="#A8E6CF" android:textColor="@color/white"
+            android:textSize="20sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="@+id/addBtn"
+            app:layout_constraintStart_toStartOf="@+id/addBtn" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/addBtn" android:layout_marginTop="16dp"/>
+    <TextView
+            android:text="장바구니"
+            android:layout_width="164dp"
+            android:layout_height="40dp" android:id="@+id/textView"
+            android:gravity="center" android:textSize="24sp"
+            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.497"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
