--- a/android-client/app/src/main/res/layout/activity_start.xml
+++ b/android-client/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".StartActivity" android:background="#FFD3B6">
+        tools:context=".StartActivity" android:background="#FDFFAB">
 
     <Button
             android:text="쇼핑하기"
