--- a/android-client/app/src/main/res/layout/main_lv_item.xml
+++ b/android-client/app/src/main/res/layout/main_lv_item.xml
@@ -8,39 +8,30 @@
             android:text="수량"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/tv_count"
-            app:layout_constraintEnd_toStartOf="@+id/tv_price" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="88dp" android:layout_marginEnd="40dp" android:layout_marginRight="40dp"
+            app:layout_constraintEnd_toStartOf="@+id/tv_price"
+            android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
             android:textStyle="bold"
-            android:descendantFocusability="blocksDescendants"/>
+            android:descendantFocusability="blocksDescendants" app:layout_constraintTop_toBottomOf="@+id/tv_name"
+            android:layout_marginTop="24dp" android:gravity="center"/>
     <TextView
             android:text="상품명"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/tv_name"
-            app:layout_constraintEnd_toStartOf="@+id/tv_count" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="88dp" android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.774"
+            android:layout_width="236dp"
+            android:layout_height="26dp" android:id="@+id/tv_name"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="84dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:textStyle="bold"
-            android:descendantFocusability="blocksDescendants"/>
+            android:descendantFocusability="blocksDescendants" android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp" android:gravity="center"/>
     <TextView
             android:text="가격"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/tv_price"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="88dp" app:layout_constraintEnd_toStartOf="@+id/plusBtn"
-            android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+            app:layout_constraintEnd_toStartOf="@+id/plusBtn"
+            android:layout_marginEnd="72dp" android:layout_marginRight="72dp"
             android:descendantFocusability="blocksDescendants"
-            android:textStyle="bold"/>
-    <Button
-            android:text="+"
-            android:layout_width="52dp"
-            android:layout_height="34dp" android:id="@+id/plusBtn"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:descendantFocusability="blocksDescendants"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="52dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
-            android:layout_marginRight="44dp" android:textStyle="bold" android:textSize="14sp"
-            android:gravity="center" android:background="#A8E6CF"/>
+            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/tv_name"
+            android:layout_marginTop="24dp" android:gravity="center"/>
     <Button
             android:layout_width="52dp"
             android:layout_height="34dp" android:id="@+id/minusBtn"
@@ -48,8 +39,19 @@
             android:descendantFocusability="blocksDescendants"
             android:focusableInTouchMode="false"
             app:layout_constraintTop_toBottomOf="@+id/plusBtn"
-            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="@+id/plusBtn"
+            android:layout_marginTop="4dp" app:layout_constraintEnd_toEndOf="@+id/plusBtn"
             app:layout_constraintStart_toStartOf="@+id/plusBtn"
             app:layout_constraintHorizontal_bias="0.0" android:text="—" android:textStyle="bold"
             android:background="#FFD3B6"/>
+    <Button
+            android:text="+"
+            android:layout_width="52dp"
+            android:layout_height="34dp" android:id="@+id/plusBtn"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:descendantFocusability="blocksDescendants"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="84dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
+            android:layout_marginRight="44dp" android:textStyle="bold" android:textSize="14sp"
+            android:gravity="center" android:background="#A8E6CF"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
