--- a/android-client/app/src/main/res/layout/activity_cart.xml
+++ b/android-client/app/src/main/res/layout/activity_cart.xml
@@ -13,10 +13,10 @@
             android:layout_height="50dp" android:id="@+id/addBtn"
             android:textColor="@color/white" android:background="#FFC7C7"
             android:textSize="20sp" android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/tv_total"
-            app:layout_constraintEnd_toEndOf="@+id/tv_total_sum"
-            app:layout_constraintTop_toBottomOf="@+id/tv_total"
-            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="32dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/mainListView"
+            app:layout_constraintEnd_toEndOf="@+id/mainListView"
+            app:layout_constraintStart_toStartOf="@+id/mainListView" android:layout_marginTop="112dp"
+            app:layout_constraintHorizontal_bias="0.486"/>
     <ListView
             android:layout_width="382dp"
             android:layout_height="369dp"
@@ -29,25 +29,28 @@
             android:layout_height="29dp" android:id="@+id/tv_total"
             android:gravity="center_horizontal" android:textStyle="bold"
             android:textSize="16sp" app:layout_constraintEnd_toStartOf="@+id/tv_total_sum"
-            android:layout_marginEnd="12dp" android:layout_marginRight="12dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/mainListView" android:layout_marginTop="52dp"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/mainListView" android:layout_marginTop="52dp"
+            app:layout_constraintStart_toStartOf="@+id/mainListView" app:layout_constraintHorizontal_bias="0.825"/>
     <TextView
             android:text="0"
             android:layout_width="160dp"
             android:layout_height="31dp" android:id="@+id/tv_total_sum"
             android:gravity="center_horizontal" android:textSize="16sp"
-            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="68dp"
-            android:layout_marginRight="68dp" app:layout_constraintTop_toBottomOf="@+id/mainListView"
-            android:layout_marginTop="52dp"/>
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/mainListView"
+            android:layout_marginTop="52dp" app:layout_constraintEnd_toEndOf="@+id/mainListView"
+            android:layout_marginEnd="56dp"/>
     <Button
             android:text="결제하기"
             android:layout_width="267dp"
             android:layout_height="50dp" android:id="@+id/payyBtn"
             android:background="#A8E6CF" android:textColor="@color/white"
-            android:textSize="20sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="@+id/addBtn"
-            app:layout_constraintStart_toStartOf="@+id/addBtn" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/addBtn" android:layout_marginTop="16dp"/>
+            android:textSize="20sp" android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/mainListView"
+            app:layout_constraintTop_toBottomOf="@+id/addBtn"
+            app:layout_constraintEnd_toEndOf="@+id/mainListView" app:layout_constraintHorizontal_bias="0.486"
+    />
     <TextView
             android:text="장바구니"
             android:layout_width="164dp"
