--- a/android-client/app/src/main/res/layout/activity_video.xml
+++ b/android-client/app/src/main/res/layout/activity_video.xml
@@ -7,42 +7,22 @@
         android:layout_height="match_parent"
         tools:context=".VideoActivity">
     <Button
-            android:id="@+id/camera_capture_button"
-            android:layout_width="81dp"
-            android:layout_height="65dp"
+            android:id="@+id/complete_btn"
+            android:layout_width="289dp"
+            android:layout_height="63dp"
             android:elevation="2dp"
             android:scaleType="fitCenter"
-            android:text="장바구니"
+            android:text="쇼핑종료"
             android:background="#FFAAA5"
             android:textColor="@color/white" android:textSize="20sp" android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="52dp" app:layout_constraintTop_toTopOf="@+id/count"
-            app:layout_constraintBottom_toBottomOf="@+id/count" app:layout_constraintStart_toEndOf="@+id/count"
-            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.444"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/viewFinder"
+            android:layout_marginTop="32dp"/>
     <androidx.camera.view.PreviewView
             android:id="@+id/viewFinder"
             android:layout_width="411dp"
             android:layout_height="547dp" android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-            android:id="@+id/total"
-            android:layout_width="81dp"
-            android:layout_height="43dp" android:layout_marginStart="48dp"
-            android:text="총 수량:" android:textAlignment="center"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/count" app:layout_constraintBottom_toBottomOf="@+id/count"
-            app:layout_constraintEnd_toStartOf="@+id/count"/>
-    <TextView
-            android:id="@+id/count"
-            android:layout_width="88dp"
-            android:layout_height="47dp"
-            android:text="0" android:textAlignment="center"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.443"
-            app:layout_constraintTop_toBottomOf="@+id/viewFinder" app:layout_constraintEnd_toEndOf="@+id/viewFinder"
-            app:layout_constraintStart_toStartOf="@+id/viewFinder"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
