--- a/android-client/app/src/main/res/layout/activity_pay.xml
+++ b/android-client/app/src/main/res/layout/activity_pay.xml
@@ -8,31 +8,36 @@
         tools:context=".PayActivity">
 
     <TextView
+            android:fontFamily="@font/enanum"
             android:text="내역이 없습니다."
             android:layout_width="341dp"
             android:layout_height="350dp" android:id="@+id/tv_pay"
             android:gravity="center|center_horizontal"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#FFE6E6"
-            android:textStyle="bold" android:textSize="24sp"/>
+            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#ffc3a0"
+            android:textStyle="bold" android:textSize="24sp" android:textColor="#274046"/>
     <TextView
+            android:fontFamily="@font/enanum"
             android:text="결제 내역"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView2"
             android:gravity="center" android:textSize="24sp"
             android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.498" android:textColor="#FFAAA5"/>
+            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.498" android:textColor="#274046"/>
     <Button
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/enanum"
             android:text="결제하기"
             android:layout_width="268dp"
             android:layout_height="61dp" android:id="@+id/emailBtn"
             app:layout_constraintStart_toStartOf="@+id/tv_pay" app:layout_constraintEnd_toEndOf="@+id/tv_pay"
-            app:layout_constraintHorizontal_bias="0.493" android:textColor="@color/white" android:background="#A8E6CF"
+            app:layout_constraintHorizontal_bias="0.493" android:textColor="@color/white"
             android:textSize="24sp" android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/edit_email" android:layout_marginTop="32dp"/>
     <EditText
+            android:fontFamily="@font/enanum"
             android:layout_width="319dp"
             android:layout_height="39dp"
             android:inputType="textPersonName"
@@ -44,5 +49,5 @@
             android:textStyle="bold"
             android:textSize="16sp"
 
-    />
+            android:textColor="#274046"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
