--- a/android-client/app/src/main/res/drawable/button_background.xml
+++ b/android-client/app/src/main/res/drawable/button_background.xml
@@ -3,8 +3,8 @@
         <!--<solid android:color="#dddddd"/>-->
         <gradient
                 android:angle="0"
-                android:startColor="#FBD786"
-                android:endColor="#f7797d"
+                android:startColor="#2BC0E4"
+                android:endColor="#2BC0E4"
                 android:type="linear" />
         <corners android:bottomLeftRadius="30dp"
                  android:bottomRightRadius="30dp"
