--- a/android-client/app/src/main/res/drawable/tv_background.xml
+++ b/android-client/app/src/main/res/drawable/tv_background.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <stroke android:width="10dp" android:color="#FFEFBC"/>
-        <solid android:color="#FFEFBC"/>
+        <stroke android:width="10dp" android:color="#f2fcfe"/>
+        <solid android:color="#f2fcfe"/>
         <corners android:radius="30dp"/>
     </shape>
 </item>
