--- a/android-client/app/src/main/res/layout/activity_login2.xml
+++ b/android-client/app/src/main/res/layout/activity_login2.xml
@@ -4,7 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".Login2Activity" android:background="#FFDAC7">
+                                                   tools:context=".Login2Activity">
 
     <EditText
             android:fontFamily="@font/enanum"
@@ -34,7 +34,7 @@
     <Button
             android:fontFamily="@font/enanum"
             android:background="@drawable/button_background"
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_login"
             android:layout_width="237dp"
             android:layout_height="62dp"
             android:text="로그인"
@@ -42,5 +42,16 @@
             app:layout_constraintStart_toStartOf="@+id/tv_pass" app:layout_constraintEnd_toEndOf="@+id/tv_pass"
             app:layout_constraintTop_toBottomOf="@+id/tv_pass" android:layout_marginTop="124dp"
             android:textColor="@color/white"/>
-
+    <Button
+            android:fontFamily="@font/enanum"
+            android:background="@drawable/button2_background"
+            android:id="@+id/btn_katok"
+            android:layout_width="237dp"
+            android:layout_height="62dp"
+            android:text="카카오 로그인"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="@+id/btn_login" app:layout_constraintEnd_toEndOf="@+id/btn_login"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" android:layout_marginTop="28dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
