--- a/android-client/app/src/main/res/layout/activity_pay.xml
+++ b/android-client/app/src/main/res/layout/activity_pay.xml
@@ -15,7 +15,7 @@
             android:gravity="center|center_horizontal"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#ffc3a0"
+            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#f2fcfe"
             android:textStyle="bold" android:textSize="24sp" android:textColor="#274046"/>
     <TextView
             android:fontFamily="@font/enanum"
