--- a/android-client/app/src/main/res/layout/activity_pay2.xml
+++ b/android-client/app/src/main/res/layout/activity_pay2.xml
@@ -8,6 +8,7 @@
         tools:context=".Pay2Activity">
 
     <TextView
+            android:scrollbars="vertical"
             android:fontFamily="@font/enanum"
             android:text="내역이 없습니다."
             android:layout_width="341dp"
@@ -15,7 +16,7 @@
             android:gravity="center|center_horizontal"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#ffc3a0"
+            android:layout_marginTop="36dp" app:layout_constraintHorizontal_bias="0.497" android:background="#f2fcfe"
             android:textStyle="bold" android:textSize="24sp" android:textColor="#274046"/>
     <TextView
             android:fontFamily="@font/enanum"
