--- a/android-client/app/src/main/res/layout/activity_qr.xml
+++ b/android-client/app/src/main/res/layout/activity_qr.xml
@@ -5,11 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".QrActivity" android:background="#ffc3a0">
+        tools:context=".QrActivity">
 
     <ImageView
             android:layout_width="342dp"
-            android:layout_height="359dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/QR_imgview"
+            android:layout_height="359dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/qr_imgview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492" app:layout_constraintTop_toBottomOf="@+id/textView6"
@@ -18,11 +18,11 @@
             android:text="퇴장시 출입구에서\n 보여주세요^^"
             android:layout_width="237dp"
             android:layout_height="58dp" android:id="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/QR_imgview" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp" android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@+id/qr_imgview"
+            android:layout_marginTop="36dp" android:textAlignment="center"
             android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.497"
-            android:textStyle="bold" android:textSize="20sp" android:textColor="#274046"/>
+            android:textStyle="bold" android:textSize="20sp" android:textColor="#274046"
+            app:layout_constraintEnd_toEndOf="@+id/qr_imgview" app:layout_constraintStart_toStartOf="@+id/qr_imgview"/>
     <TextView
             android:text="퇴장 QR코드"
             android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
             android:textColor="#274046" android:textStyle="bold"
             android:textSize="34sp" android:gravity="center" android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
             app:layout_constraintHorizontal_bias="0.497"/>
     <Button
             android:fontFamily="@font/enanum"
@@ -40,5 +40,6 @@
             android:layout_height="70dp" android:id="@+id/btn_fin"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
             android:layout_marginTop="36dp" app:layout_constraintEnd_toEndOf="@+id/textView5"
-            app:layout_constraintStart_toStartOf="@+id/textView5"/>
+            app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
