--- a/android-client/app/src/main/res/layout/activity_splash.xml
+++ b/android-client/app/src/main/res/layout/activity_splash.xml
@@ -5,25 +5,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".StartActivity">
+        tools:context=".SplashActivity">
 
-    <Button
-            android:fontFamily="@font/enanum"
-            android:text="쇼핑하기"
-            android:background="@drawable/button_background"
-            android:layout_width="259dp"
-            android:layout_height="70dp" android:id="@+id/btn_go_login"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
-            android:textSize="34sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/textView4"
-            android:layout_marginTop="188dp"/>
     <TextView
             android:text="ITrackU"
             android:fontFamily="@font/enanum"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4"
+            android:layout_height="wrap_content" android:id="@+id/textView7"
             android:textColor="#00c6ff" android:textStyle="bold"
             android:textSize="46sp" android:textAlignment="center" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="224dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.499"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
