--- a/android-client/app/src/main/res/layout/activity_upload.xml
+++ b/android-client/app/src/main/res/layout/activity_upload.xml
@@ -38,7 +38,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="100dp"
                     android:layout_marginBottom="10dp"
-                    android:background="#ffc3a0"
+                    android:background="#f2fcfe"
                     android:layout_gravity="center_horizontal"/>
             <Button
                     android:fontFamily="@font/enanum"
