--- a/android-client/app/src/main/res/layout/activity_video.xml
+++ b/android-client/app/src/main/res/layout/activity_video.xml
@@ -9,21 +9,32 @@
     <Button
             android:fontFamily="@font/enanum"
             android:id="@+id/complete_btn"
-            android:layout_width="289dp"
-            android:layout_height="63dp"
+            android:layout_width="246dp"
+            android:layout_height="65dp"
             android:elevation="2dp"
             android:scaleType="fitCenter"
             android:text="쇼핑종료"
             android:background="@drawable/button_background"
             android:textColor="@color/white" android:textSize="20sp" android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/viewFinder"
-            android:layout_marginTop="32dp"/>
+            app:layout_constraintStart_toStartOf="@+id/tv_result"
+            app:layout_constraintEnd_toEndOf="@+id/tv_result"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintTop_toBottomOf="@+id/tv_result"
+            app:layout_constraintVertical_bias="0.0"/>
     <androidx.camera.view.PreviewView
             android:id="@+id/viewFinder"
-            android:layout_width="411dp"
-            android:layout_height="547dp" android:layout_marginTop="4dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_width="392dp"
+            android:layout_height="433dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
+            app:layout_constraintHorizontal_bias="0.473"/>
+    <TextView
+            android:fontFamily="@font/enanum"
+            android:text="아직 인식된 내용이 없습니다."
+            android:layout_width="367dp"
+            android:layout_height="148dp" android:id="@+id/tv_result"
+            android:gravity="center" android:background="@drawable/tv_background"
+            app:layout_constraintTop_toBottomOf="@+id/viewFinder" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
