--- a/android-client/app/src/main/res/drawable/button_background.xml
+++ b/android-client/app/src/main/res/drawable/button_background.xml
@@ -3,12 +3,12 @@
         <!--<solid android:color="#dddddd"/>-->
         <gradient
                 android:angle="0"
-                android:startColor="#2BC0E4"
-                android:endColor="#2BC0E4"
+                android:startColor="#4E574D"
+                android:endColor="#4E574D"
                 android:type="linear" />
-        <corners android:bottomLeftRadius="30dp"
-                 android:bottomRightRadius="30dp"
-                 android:topLeftRadius="30dp"
-                 android:topRightRadius="30dp"/>
+        <corners android:bottomLeftRadius="15dp"
+                 android:bottomRightRadius="15dp"
+                 android:topLeftRadius="15dp"
+                 android:topRightRadius="15dp"/>
         <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
     </shape>
