--- a/android-client/app/src/main/res/drawable/button_katok.xml
+++ b/android-client/app/src/main/res/drawable/button_katok.xml
@@ -6,9 +6,9 @@
             android:startColor="#FFEB33"
             android:endColor="#FFEB33"
             android:type="linear" />
-    <corners android:bottomLeftRadius="30dp"
-             android:bottomRightRadius="30dp"
-             android:topLeftRadius="30dp"
-             android:topRightRadius="30dp"/>
+<!--    <corners android:bottomLeftRadius="30dp"-->
+<!--             android:bottomRightRadius="30dp"-->
+<!--             android:topLeftRadius="30dp"-->
+<!--             android:topRightRadius="30dp"/>-->
     <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
 </shape>
