--- a/android-client/app/src/main/res/layout/activity_feed.xml
+++ b/android-client/app/src/main/res/layout/activity_feed.xml
@@ -26,30 +26,30 @@
     <Button
             android:fontFamily="@font/enanum"
             android:text="상품 추가하기"
-            android:layout_width="163dp"
-            android:layout_height="58dp" android:id="@+id/addBtn"
-            android:textColor="@color/white"             android:background="@drawable/button_background"
+            android:layout_width="131dp"
+            android:layout_height="41dp" android:id="@+id/addBtnf"
+            android:textColor="@color/white" android:background="@drawable/button_background"
 
             android:textSize="20sp" android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/tv_total"
-            app:layout_constraintEnd_toStartOf="@+id/payyBtn" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintTop_toBottomOf="@+id/tv_total" android:layout_marginTop="32dp"/>
+            app:layout_constraintStart_toStartOf="@+id/tv_total_f"
+            app:layout_constraintEnd_toStartOf="@+id/payBtnf" app:layout_constraintHorizontal_bias="0.283"
+            app:layout_constraintTop_toBottomOf="@+id/tv_total_f" android:layout_marginTop="32dp"/>
     <Button
             android:fontFamily="@font/enanum"
             android:text="결제하기"
-            android:layout_width="163dp"
-            android:layout_height="58dp" android:id="@+id/payyBtn"
+            android:layout_width="132dp"
+            android:layout_height="44dp" android:id="@+id/payBtnf"
             android:background="@drawable/button2_background"
             android:textColor="@color/white"
             android:textSize="20sp" android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/tv_total_sum"
-            app:layout_constraintTop_toBottomOf="@+id/tv_total_sum" android:layout_marginTop="32dp"
-            android:layout_marginEnd="12dp"/>
+            app:layout_constraintEnd_toEndOf="@+id/tv_total_sum_f"
+            app:layout_constraintTop_toBottomOf="@+id/tv_total_sum_f" android:layout_marginTop="32dp"
+            android:layout_marginEnd="28dp"/>
     <TextView
             android:fontFamily="@font/enanum"
             android:text="0"
             android:layout_width="160dp"
-            android:layout_height="31dp" android:id="@+id/tv_total_sum"
+            android:layout_height="31dp" android:id="@+id/tv_total_sum_f"
             android:gravity="center_horizontal" android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/CartListView"
@@ -60,12 +60,12 @@
             android:text="총합:"
             android:layout_width="160dp"
             android:layout_height="31dp"
-            android:id="@+id/tv_total"
+            android:id="@+id/tv_total_f"
             android:gravity="center_horizontal" android:textStyle="bold"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/CartListView"
             app:layout_constraintTop_toBottomOf="@+id/CartListView" android:layout_marginTop="40dp"
-            app:layout_constraintEnd_toStartOf="@+id/tv_total_sum" android:textColor="#274046"/>
+            app:layout_constraintEnd_toStartOf="@+id/tv_total_sum_f" android:textColor="#274046"/>
     <TextView
             android:fontFamily="@font/enanum"
             android:text="장바구니"
