--- a/android-client/app/src/main/res/layout/activity_login2.xml
+++ b/android-client/app/src/main/res/layout/activity_login2.xml
@@ -33,7 +33,7 @@
             app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:fontFamily="@font/enanum"
-            android:background="@drawable/button_background"
+            android:background="@drawable/button_square"
             android:id="@+id/btn_login"
             android:layout_width="237dp"
             android:layout_height="62dp"
@@ -44,14 +44,23 @@
             android:textColor="@color/white"/>
     <Button
             android:fontFamily="@font/enanum"
-            android:background="@drawable/button2_background"
+            android:background="@drawable/kakao_login_medium_narrow"
             android:id="@+id/btn_katok"
             android:layout_width="237dp"
             android:layout_height="62dp"
-            android:text="카카오 로그인"
             android:textSize="24sp"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/btn_login" app:layout_constraintEnd_toEndOf="@+id/btn_login"
             app:layout_constraintTop_toBottomOf="@+id/btn_login" android:layout_marginTop="28dp"
             app:layout_constraintHorizontal_bias="0.0"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/bnv_main"
+            android:background="#FFFFFF"
+            app:menu="@layout/navi_menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" app:itemIconTint="#2BC0E4"
+            app:itemTextColor="@color/black"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
