--- a/android-client/app/src/main/res/layout/activity_splash.xml
+++ b/android-client/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
             android:fontFamily="@font/enanum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView7"
-            android:textColor="#00c6ff" android:textStyle="bold"
+            android:textColor="#CCA594" android:textStyle="bold"
             android:textSize="46sp" android:textAlignment="center" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.499"/>
